Fix possible css overlapping issue

--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,6 +1,6 @@
 .footer {
     position: absolute;
-    bottom: 0;
+    /* bottom: 0;  Leaving it makes it overlap with products */
     width: 100%;
     height: 60px;
     line-height: 60px;
